--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@nuxtjs/firebase": "^7.1.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
