--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
     "vue-next-level-scroll": "^1.2.0",
-    "vue-toastification": "^1.7.8"
+    "vue-toastification": "^1.7.8",
+    "vueisotope": "^3.1.2"
   },
   "devDependencies": {}
 }
